# autoware_bridge

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: build-and-test.yaml  run_unit_tests.yml
include/autoware_bridge/: autonomous_driving.hpp  autoware_bridge.hpp  autoware_bridge_util.hpp  base_task.hpp  driving_task.hpp  localization.hpp  localization_task.hpp  route_planning.hpp  set_goal_task.hpp
launch/: autoware-bridge.launch.xml  autoware_bridge.launch.xml
src/: autonomous_driving.cpp  autoware_bridge.cpp  autoware_bridge_util.cpp  driving_task.cpp  localization.cpp  localization_task.cpp  route_planning.cpp  set_goal_task.cpp
srv/: GetTaskStatus.srv
test/: test_autonomous_driving.cpp  test_autoware_bridge.cpp  test_autoware_bridge_util.cpp  test_localization.cpp  test_route_planning.cpp
